--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "json": "^11.0.0",
-    "sequelize": "^6.23.1"
+    "pg": "^8.8.0",
+    "sequelize": "^6.23.2"
   }
 }
